import com.google.gson.JsonParser
import com.google.gson.JsonObject

import java.time.LocalDateTime
import java.time.ZoneOffset
import java.time.format.DateTimeFormatter

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'idea'
    id 'antlr'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
}

base {
    archivesName = mod_id
    if(System.env.GITHUB_ACTIONS && System.env.NIGHTLY_BUILD){
        var endfix = System.env.VERSION_IDENTIFIER + "-" + LocalDateTime.now(ZoneOffset.ofHours(8)).format(DateTimeFormatter.ISO_LOCAL_DATE_TIME).replace(':','-')
        archivesName="${archivesName.get()}-${version}-${endfix}-nightly"
        version=''
    }
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    version = project.neo_version
    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        clientData {
            clientData()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime

    mcLib
    implementation {
        extendsFrom mcLib
    }
    additionalRuntimeClasspath {
        extendsFrom mcLib
    }
}

dependencies {
    jarJar(mcLib('org.antlr:antlr4-runtime:4.13.2'))
    antlr "org.antlr:antlr4:4.13.2"

    jarJar(implementation "com.xkball:xklib-3d:$xklib_version"){
        version {
            strictly '[0.0.6, 1.0.0)'
            prefer xklib_version
        }
    }
    jarJar(implementation "com.xkball:xklib-ap:$xklib_version"){
        version {
            strictly '[0.0.6, 1.0.0)'
            prefer xklib_version
        }
    }
    jarJar(implementation "com.xkball:xklib-ui:$xklib_version"){
        version {
            strictly '[0.0.6, 1.0.0)'
            prefer xklib_version
        }
    }
    jarJar(implementation "com.xkball:xklib-mc:$xklib_version"){
        version {
            strictly '[0.0.6, 1.0.0)'
            prefer xklib_version
        }
    }
    jarJar(implementation "dev.vfyjxf:taffy:1.1.4") {
        version {
            strictly '[1.1.4, 2.0.0)'
            prefer '1.1.4'
        }
    }
    jarJar(implementation "org.vineflower:vineflower:1.10.1")
    jarJar(implementation "net.lenni0451:LambdaEvents:2.4.2") {
        version {
            strictly '[2.4.2, 3.0.0)'
            prefer '2.4.2'
        }
    }
}

// https://github.com/antlr/antlr4/blob/master/doc/tool-options.md
generateGrammarSource {
    arguments += ['-package', 'com.xkball.let_me_see_see.antlr.java']
    arguments += ["-no-visitor", "-listener"]
    outputDirectory = outputDirectory.toPath().resolve("com/xkball/let_me_see_see/antlr/java").toFile()
}

compileJava.dependsOn generateGrammarSource
sourceSets.main.java.srcDir("${buildDir}/generated-src/antlr/main/com/xkball/let_me_see_see/antlr/java")

clean {
    delete 'generated-src'
}
jar{
    manifest {
        attributes(
                "Main-Class":"com.xkball.let_me_see_see.LMSMain",
                "Agent-Class":"com.xkball.let_me_see_see.LMSAgent",
                "Launcher-Agent-Class":"com.xkball.let_me_see_see.LMSAgent",
                "Can-Retransform-Classes": "true"
        )
    }
    doLast {
        if (System.env.GITHUB_ACTIONS) {
            File theFile = archiveFile.get().getAsFile()

            def outputFile = new File(System.env.GITHUB_OUTPUT)
            // Use the env-specific line separator for maximally possible compatibility
            def newLine = System.getProperty('line.separator')

            // Write out new env variable for later usage
            outputFile << newLine << "artifact_name=${theFile.getName()}"
            outputFile << newLine << "artifact_publish_name=${archiveBaseName.get()}.jar"
            outputFile << newLine << "artifact_path=${theFile.absolutePath}"
        }
    }
}

tasks.withType(net.neoforged.moddevgradle.internal.RunGameTask).configureEach{
    dependsOn jar
    systemProperty("LET_ME_SEE_AGENT_JAR_PATH",tasks.jar.archiveFile.get().getAsFile())

}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata

neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

build{
    if (System.env.GITHUB_ACTIONS){
        def outputFile = new File(System.env.GITHUB_OUTPUT)
        def newLine = System.getProperty('line.separator')
        String fileName = jar.archiveFileName.get()
        fileName = fileName.substring(0,fileName.length()-4)
        outputFile << newLine << "jar_name=${fileName}"
    }
}


tasks.register("githubActionOutput",DefaultTask){
    if (System.env.GITHUB_ACTIONS) {
        File theFile = jar.archiveFile.get().getAsFile()
        def outputFile = new File(System.env.GITHUB_OUTPUT)
        // Use the env-specific line separator for maximally possible compatibility
        def newLine = System.getProperty('line.separator')
        def publishName = "${release_name}-${loader_name}-Minecraft${minecraft_version}-${version}.jar"
        // Write out new env variable for later usage
        outputFile << newLine << "artifact_name=${theFile.getName()}"
        outputFile << newLine << "artifact_publish_name=${publishName}"
        outputFile << newLine << "artifact_path=${theFile.absolutePath}"
    }
}


//tasks.named("processResources") {
//    duplicatesStrategy = DuplicatesStrategy.INCLUDE
//    def src1 = project.layout.projectDirectory.file("src/main/resources/assets/let_me_see_see/lang/en_us.json")
//    def src2 = project.layout.projectDirectory.file("src/generated/resources/assets/let_me_see_see/lang/en_us.json")
//    def output = project.layout.buildDirectory.file("resources/main/assets/let_me_see_see/lang/en_us.json")
//    inputs.files(src1, src2)
//    outputs.file(output)
//    doLast {
//        def obj1 = JsonParser.parseString(src1.asFile.text).getAsJsonObject()
//        def obj2 = JsonParser.parseString(src2.asFile.text).getAsJsonObject()
//
//        def merged = new JsonObject()
//        obj1.entrySet().each { e -> merged.add(e.getKey(), e.getValue()) }
//        obj2.entrySet().each { e -> merged.add(e.getKey(), e.getValue()) }
//        def outputFile = output.get().asFile
//        outputFile.parentFile.mkdirs()
//        outputFile.text = merged.toString()
//    }
//}
